--- a/scripts/deploy/group_vars/all.yml
+++ b/scripts/deploy/group_vars/all.yml
@@ -2,16 +2,16 @@
 ## basic config
 
 # NOTE: change to your aws ec2 key file here
-ansible_ssh_private_key_file: ~/.ssh/ted-aws-key2.pem
+ansible_ssh_private_key_file: /home/zhe/.ssh/id_rsa
 
 # the rest of config works for Ubuntu 18.04 image on Amazon EC2
 
 ansible_connection: ssh
-ansible_user: ubuntu
+ansible_user: zhe
 # remote directory that keeps the work directory for the running app
-testbed_prefix: "/home/ubuntu/testbed"
+testbed_prefix: "/home/zhe/bench-bft/libhotstuff"
 # must use Python 3
-ansible_python_interpreter: /usr/bin/python3
+ansible_python_interpreter: /usr/bin/python3.8
 
 ## build config
 hs_flags: "-g -DHOTSTUFF_ENABLE_BENCHMARK"
@@ -20,10 +20,10 @@ hs_flags: "-g -DHOTSTUFF_ENABLE_BENCHMARK"
 # process name that is used by killall in reset
 bin_name: hotstuff-app
 # binary path (remote)
-replica_bin: "/home/ubuntu/libhotstuff/examples/hotstuff-app"
-client_bin: "/home/ubuntu/libhotstuff/examples/hotstuff-client"
+replica_bin: "/home/zhe/bench-bft/libhotstuff/examples/hotstuff-app"
+client_bin: "/home/zhe/bench-bft/libhotstuff/examples/hotstuff-client"
 # remote repo path
-hs_repo_dir: "/home/ubuntu/libhotstuff"
+hs_repo_dir: "/home/zhe/bench-bft/libhotstuff"
 # local source code path (that will be copied to the remote)
 hs_local_repo_dir: "../../"
 hs_conf_dir: "conf"
